# sim_datacollect_g1-inspire

./: .gitignore  .gitmodules  README.md  environment-xr-teleoperate.yml  pyproject.toml
assets/calibration/: mano_right_hug_canonical.npz
assets/labutopia/: Beaker_01.usd
configs/: mano_inspire_calibration.json  pipeline.yaml  real_robot_dry_run.yaml
docs/: autonomous_ik_beaker_experiment_2026-07-20.md  autonomous_ik_profile_experiment_2026-07-20.md  between_arms_121_position_sweep_2026-07-19.md  hug_ik_experiment_2026-07-19.md  hug_sampling_position_sweep_2026-07-19.md  ik_object_position_sweep_2026-07-19.md  ik_reachability_diagnosis_2026-07-19.md  pregrasp_offset_3cm_experiment_2026-07-19.md  real_bottle_sim_review_2026-07-20.md  real_robot_dry_run.md
sim_tasks/: __init__.py
sim_tasks/lab_beaker_g1_inspire/: __init__.py  env_cfg.py
src/lab_g1_collect/: __init__.py  arm_ik.py  calibrate_mano_inspire.py  cli.py  config.py  dataset.py  g1_camera_geometry.py  hug_bridge.py  hug_condition.py  hug_runtime.py  hug_stability_experiment.py  initial_pose.py  lerobot_export.py  real_arm_player.py  real_camera.py  real_camera_server.py  real_grasp.py  real_initialize.py  real_state.py  retarget.py  sim_action.py  sim_smoke.py  trajectory.py  xr_teleoperate_ik.py
src/lab_g1_collect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: analyze_ik_episode.py
tools/g1_state_reader/: CMakeLists.txt  initialize_upper_body.cpp  main.cpp
tools/retarget_calibrator/: .gitignore  index.html  package-lock.json  package.json
tools/retarget_calibrator/public/models/: current_transform.json  inspire_open.glb  mano_open.glb
tools/retarget_calibrator/src/: app.js  scene.js  styles.css
