[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-g1-collect"
version = "0.1.0"
description = "G1 right arm + Inspire RH56DFTP laboratory grasp data pipeline"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "Pillow>=10", "PyYAML>=6"]

[project.optional-dependencies]
real = ["msgpack>=1.0", "pyzmq>=25"]

[project.scripts]
lab-g1 = "lab_g1_collect.cli:main"
lab-g1-real = "lab_g1_collect.real_grasp:main"
lab-g1-init-plan = "lab_g1_collect.real_initialize:main"
lab-g1-arm-player = "lab_g1_collect.real_arm_player:main"
lab-g1-rgbd-server = "lab_g1_collect.real_camera_server:main"

[tool.setuptools.packages.find]
where = ["src"]
